bitwarden/network-policy-bitwarden-allow-external-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitwarden-allow-external-egress
  namespace: bitwarden
spec:
  podSelector:
    matchLabels:
      service: bitwarden
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 443
